----------------------------------------------------------------------
 OmegaT 5.3.0
----------------------------------------------------------------------
  4 Enhancements
  6 Bug fixes
  2 Localisation updates
----------------------------------------------------------------------
5.3.0 vs 5.2.0

  Implemented requests:

  - Support reading metadata from plugins and display in UI
  https://sourceforge.net/p/omegat/feature-requests/1434/

  - Add a "file" type to repository type
  https://sourceforge.net/p/omegat/feature-requests/1446/

  - Configurable Fuzzy Matches Threshold
  https://sourceforge.net/p/omegat/feature-requests/1450/

  - Mozilla .ftl files filter
  https://sourceforge.net/p/omegat/feature-requests/1479/

  Bug fixes:

  - Wrong directory separator character used in external command
  placeholders on Windows
  https://sourceforge.net/p/omegat/bugs/984/

  - RLE and LRE control characters not visible in editor
  https://sourceforge.net/p/omegat/bugs/988/

  - "Use as default translation" does not work
  https://sourceforge.net/p/omegat/bugs/987/

  - Deleting repository mappings under Java 11
  https://sourceforge.net/p/omegat/bugs/990/

  - Missing custom messages in installer fall back to wrong language
  https://sourceforge.net/p/omegat/bugs/997/

  - Tag validation false positives for some tags from html2 filter
  https://sourceforge.net/p/omegat/bugs/1001/

  Localisation Updates:

  - Corsican localisation added at 5.3.0 (UI, scripts, readme)
  - Ukrainian localisation updated to 5.2.0 (UI, readme, documentation)

----------------------------------------------------------------------
 OmegaT 5.2.0 (2020-01-26)
----------------------------------------------------------------------
  3 Enhancements
  5 Bug fixes
  7 Localisation updates
----------------------------------------------------------------------
5.2.0 vs 5.1.0

  Implemented requests:

  - Support TMX "tuid" attribute for alternative translation matching