@@ -807,6 +807,7 @@ RMD_INVALID_BLANK_REPO=lege URL voor opslagplaats voor de mappen
 RMD_TABLE_REPO_TYPE_GIT=Git
 RMD_TABLE_REPO_TYPE_SVN=Subversion
 RMD_TABLE_REPO_TYPE_HTTP=HTTP(S)
+RMD_TABLE_REPO_TYPE_FILE=Bestand
 
 # NewProjectDialog.java
 NP_INVALID_SOURCE_LOCALE=De opgegeven taal voor de bronbestanden is ongeldig!\n
@@ -1178,6 +1179,13 @@ MOZDTD_FILTER_NAME=Mozilla DTD
 MOZDTD_FILTER_OPTIONS_TITLE=Mozilla DTD-filteropties
 MOZDTD_FILTER_REMOVE_STRINGS_UNTRANSLATED=&Verwijder niet-vertaalde tekenreeksen in de doelbestanden
 MOZDTD_FILTER_EXCEPTION=Het Mozilla DTD-filter genereerde een uitzondering:
+
+# MozillaFTLFilter.java
+
+MOZFTL_FILTER_NAME=Mozilla FTL
+MOZFTL_FILTER_OPTIONS_TITLE=Mozilla FTL Filteropties
+MOZFTL_FILTER_REMOVE_STRINGS_UNTRANSLATED=&Verwijder niet-vertaalde tekenreeksen in de doelbestanden
+MOZFTL_FILTER_EXCEPTION=Het filter Mozilla FTL genereerde een uitzondering:
 
 # MozillaLangFilter.java
 
@@ -1623,6 +1631,7 @@ EXT_TMX_SORT_KEY=Fuzzy overeenkomsten sorteren op:
 EXT_TMX_SORT_KEY_SCORE=Stemming, geen tags en geen getallen
 EXT_TMX_SORT_KEY_SCORE_NO_STEM=Geen tags en geen getallen
 EXT_TMX_SORT_KEY_ADJUSTED_SCORE=Volledige tekst, inclusief tags en getallen
+EXT_TMX_FUZZY_THRESHOLD_KEY=Minimale drempel om een fuzzy overeenkomst weer te geven:
 PREFS_TITLE_TM_MATCHES=Overeenkomsten TM
 
 # org.omegat.gui.dialogs.ViewOptionsDialog.java
@@ -2014,6 +2023,7 @@ MT_ENGINE_YANDEX=Yandex Translate
 MT_ENGINE_MOSES=Moses
 MT_ENGINE_DEEPL=DeepL
 MT_ENGINE_IBMWATSON=IBM Watson
+MT_ENGINE_YANDEX_CLOUD=Yandex.Cloud
 
 MT_JSON_ERROR=Fout bij het lezen van resultaten van MT
 
@@ -2056,6 +2066,15 @@ MT_ENGINE_YANDEX_MAZ_SIZE=De grootte van de tekst overschrijdt het maximum
 MT_ENGINE_YANDEX_TRANSLATION_NOT_POSSIBLE=De tekst kon niet worden vertaald
 MT_ENGINE_YANDEX_DIRECTION_NOT_SUPPORTED=De gespecificeerde richting voor de vertaling wordt niet ondersteund
 MT_ENGINE_YANDEX_API_KEY_LABEL=API-sleutel:
+
+MT_ENGINE_YANDEX_CLOUD_FOLDER_ID_LABEL=ID van map
+MT_ENGINE_YANDEX_CLOUD_OAUTH_TOKEN_LABEL=OAuth-token
+MT_ENGINE_YANDEX_CLOUD_GLOSSARY_CHECKBOX=Termen uit woordenlijst gebruiken
+MT_ENGINE_YANDEX_CLOUD_OAUTH_TOKEN_NOT_FOUND=Geen token voor OAuth gespecificeerd
+MT_ENGINE_YANDEX_CLOUD_FOLDER_ID_NOT_FOUND=Geen ID voor map gespecificeerd
+MT_ENGINE_YANDEX_CLOUD_BAD_IAM_RESPONSE=Kan antwoord van IAM service niet parsen
+MT_ENGINE_YANDEX_CLOUD_BAD_TRANSLATE_RESPONSE=Kan antwoord van vertaalservice niet parsen
+MT_ENGINE_YANDEX_CLOUD_BAD_ERROR_REPORT=Kan foutrapport van service niet parsen
 
 MT_ENGINE_MOSES_URL_LABEL=Moses Server URL:
 MT_ENGINE_MOSES_URL_NOTFOUND=De URL voor de server van Moses is niet ingesteld
@@ -2725,6 +2744,12 @@ PREFERENCES_WARNING_NEEDS_RELOAD=Het huidige project moet opnieuw worden geladen
 PREFS_TITLE_PLUGINS=Plug-ins
 PREFS_PLUGINS_BROWSE_ONLINE=Online &bladeren
 PREFS_PLUGINS_AVAILABLE_ONLINE=Er zijn online vele plug-ins beschikbaar voor OmegaT.
+PREFS_PLUGINS_LIST=Ge\u00efnstalleerde plug-ins:
+PREFS_PLUGINS_COL_CLASS=Klasse
+PREFS_PLUGINS_COL_NAME=Naam
+PREFS_PLUGINS_COL_VERSION=Versie
+PREFS_PLUGINS_COL_AUTHOR=Auteur
+PREFS_PLUGINS_COL_DESCRIPTION=Beschrijving
 
 PREFS_TITLE_MACHINE_TRANSLATION=Machinevertaling
 PREFS_MT_CONFIGURE_BUTTON=Con&figureren
